# game_homework

./: .gitignore  LICENSE  Makefile  README.md  README.txt  codespaces-blank.code-workspace  pyproject.toml
brain_games/: cli.py
brain_games/brain_games.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
