[project]
name = "brain_games"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
    "prompt-toolkit>=3.0.51",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[lint.per-file-ignores]
  # init modules can contain the local imports, logic, unused imports
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]
